Configure Dependabot to ignore major version updates
Major version updates often have breaking changes that require:
- Code migration
- Configuration changes
- Manual testing

Only patch and minor updates will be auto-created and auto-merged.
Major updates should be handled manually when ready.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ updates:
       interval: "daily"
       time: "09:00"
     open-pull-requests-limit: 10
+    # Ignore major version updates - handle manually
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
     # Group dependency updates to reduce PR noise
     groups:
       production-dependencies:
