--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,6 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.0",
-    "vercel": "^33.0.0"
+    "typescript": "^5.4.0"
   }
 }
