Fix Cloudflare Pages deployment to include SSR functions
- Run wrangler from app directory to use wrangler.toml config
- Let wrangler auto-detect Pages Functions from build/server
- This enables server-side rendering for React Router app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy app/build/client --project-name=meatup-club
+          workingDirectory: app
+          command: pages deploy
