Migrate from Cloudflare Pages to Workers for React Router 7 SSR
React Router 7 with server-side rendering requires Cloudflare Workers
instead of Pages for full-stack deployment. This commit updates:

- wrangler.toml: Configure Workers deployment with main entry point,
  assets binding, and compatibility flags
- vite.config.ts: Add cloudflareDevProxy for local development
- GitHub Actions: Change from 'pages deploy' to 'deploy' command
- Terraform: Replace Pages resources with Worker routes and update
  DNS records to use proxied CNAME configuration

Next steps: Apply Terraform changes and set Worker secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Deploy to Cloudflare Pages
+      - name: Deploy to Cloudflare Workers
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: app
-          command: pages deploy
+          command: deploy
