--- a/app/wrangler.toml
+++ b/app/wrangler.toml
@@ -1,6 +1,11 @@
 name = "meatup-club"
+main = "./build/server/index.js"
 compatibility_date = "2025-12-24"
-pages_build_output_dir = "./build/client"
+compatibility_flags = ["nodejs_compat"]
+
+[assets]
+directory = "./build/client"
+binding = "ASSETS"
 
 [[d1_databases]]
 binding = "DB"
@@ -9,6 +14,3 @@ database_id = "3a6fb3b4-0322-4ab0-b8df-09b5d19af1c1"
 
 [vars]
 NODE_VERSION = "20"
-# GOOGLE_CLIENT_ID = "your-client-id"
-# GOOGLE_CLIENT_SECRET = "your-client-secret"
-# SESSION_SECRET = "your-session-secret"
