Fix Workers deployment path and update Terraform for Workers
- Update wrangler.toml main path to build/server/default/index.js
- Update DNS records to use 100:: placeholder for Workers routing
- Comment out Worker routes in Terraform until first deployment
- Update outputs to reflect Workers instead of Pages

This completes the migration from Cloudflare Pages to Workers.

--- a/app/wrangler.toml
+++ b/app/wrangler.toml
@@ -1,5 +1,5 @@
 name = "meatup-club"
-main = "./build/server/index.js"
+main = "./build/server/default/index.js"
 compatibility_date = "2025-12-24"
 compatibility_flags = ["nodejs_compat"]
 
