Add Worker entry point for React Router 7
- Create workers/app.ts with fetch handler and createRequestHandler
- Update wrangler.toml main to point to workers/app.ts
- Configure D1 and ASSETS bindings in TypeScript types

This provides the required default export for Cloudflare Workers.

--- a/app/wrangler.toml
+++ b/app/wrangler.toml
@@ -1,5 +1,5 @@
 name = "meatup-club"
-main = "./build/server/default/index.js"
+main = "./workers/app.ts"
 compatibility_date = "2025-12-24"
 compatibility_flags = ["nodejs_compat"]
 
