--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-router": "7.11.0"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.19.0",
     "@react-router/dev": "7.11.0",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
