Fix GitHub Actions workflow name: Workers not Pages
The workflow was named "Deploy to Cloudflare Pages" but actually
deploys to Cloudflare Workers via 'wrangler deploy'.

Changed:
- Workflow name: "Deploy to Cloudflare Workers"
- Job name: "Deploy to Cloudflare Workers"

The actual deployment is correct (uses wrangler deploy to Workers),
just the workflow naming was misleading.

Verified from logs:
- Uses 'wrangler deploy' command
- Deploys to meatup-club.spahrj.workers.dev
- Shows "Worker Startup Time: 28 ms"
- Has Workers bindings (DB, ASSETS)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloudflare Pages
+name: Deploy to Cloudflare Workers
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    name: Deploy to Cloudflare Pages
+    name: Deploy to Cloudflare Workers
 
     steps:
       - name: Checkout repository
