Integrate tests into deployment process
Changes:
1. Fixed pre-commit hook to run 'npm run test:run' instead of 'npm test'
   - Prevents hanging in watch mode during commits
   - Ensures all tests pass before allowing commits

2. Updated deploy script to run tests before deployment
   - Changed: "npm run build && wrangler pages deploy"
   - To: "npm run test:run && npm run build && wrangler deploy"
   - Prevents deploying broken code

3. Added GitHub Actions CI/CD workflow
   - Runs on every push to main and all pull requests
   - Jobs:
     * Type checking (npm run typecheck)
     * Test execution (npm run test:run)
     * Coverage report generation
     * Build verification
   - Uploads coverage and build artifacts

With these changes, tests now run:
- Before every commit (pre-commit hook)
- Before every deployment (deploy script)
- On every push/PR (GitHub Actions)

This ensures the poll closing bug (and similar issues) would be caught
before reaching production.

--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "deploy": "npm run build && wrangler pages deploy ./build/client",
+    "deploy": "npm run test:run && npm run build && wrangler deploy",
     "preview": "npm run build && wrangler pages dev ./build/client",
     "typecheck": "react-router typegen && tsc",
     "cf-typegen": "wrangler types",
