Enforce timezone-safe date comparisons

--- a/app/.env.example
+++ b/app/.env.example
@@ -7,3 +7,6 @@ SESSION_SECRET=your-random-session-secret
 
 # Node Environment
 NODE_ENV=development
+
+# App timezone (IANA name, e.g. America/Chicago)
+APP_TIMEZONE=America/New_York
