Add SMS reminders

--- a/app/.env.example
+++ b/app/.env.example
@@ -10,3 +10,8 @@ NODE_ENV=development
 
 # App timezone (IANA name, e.g. America/Chicago)
 APP_TIMEZONE=America/New_York
+
+# Twilio SMS
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_FROM_NUMBER=+15551234567
