--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,16 +6,18 @@
 # Appearance
 appearance:
   mode: light
-  color: indigo
+  color: stone
+  custom_css:
+    - custom.css
 
 # SEO
 marketing:
   seo:
-    site_type: Person
+    site_type: Organization
     local_business_type: ''
-    org_name: ''
-    description: 'A highly-customizable Hugo landing page theme powered by Hugo Blox website builder.'
-    twitter: 'GetResearchDev'
+    org_name: 'Meatup.Club'
+    description: 'Quarterly steakhouse meetups, member-voted venues, and low-friction RSVPs.'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -34,20 +36,20 @@ header:
     align: "center"
     fixed_to_top: true
     logo:
-      text: ""
+      text: "Meatup.Club"
       # Logo filename in `assets/media/` folder
       filename: "logo.svg"
     button:
       enable: true
-      text: "Get Started"
-      url: "https://hugoblox.com/templates/"
+      text: "Member Login"
+      url: "/login"
     show_search: true
-    show_theme_chooser: true
+    show_theme_chooser: false
 
 # Site footer
 footer:
   copyright:
-    notice: '© {year} My Company'
+    notice: '© {year} Meatup.Club'
 
 # Localization
 locale:
