--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@react-router/cloudflare": "7.13.0",
     "isbot": "^5.1.34",
     "react": "^19.2.4",
